# geoPulse

./: Dockerfile  Makefile  README.md  README_GEOLOCATION.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  env.example  main.py  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/entity/: __init__.py
app/internal/pkg/middlewares/: correlation.py  handle_http_exceptions.py  localization.py  validation_error_handler.py
app/internal/repository/: repository.py
app/internal/repository/postgresql/: __init__.py  connection.py  device_repository.py  geofence_repository.py  healthz_orm.py  location_repository.py  notification_repository.py
app/internal/routes/: __init__.py  geolocation.py  healthz.py
app/internal/services/: __init__.py  geolocation_service.py  healthz.py
app/pkg/clients/: __init__.py  firebase.py  google_maps.py  kafka_producer.py  telegram.py
app/pkg/clients/api/: base.py
app/pkg/connectors/: __init__.py  postgresql.py  redis.py  sqlalchemy.py
app/pkg/db/: base.py
app/pkg/db/models/: __init__.py  device.py  example.py  geofence.py  (+2 more)
app/pkg/localization/: __init__.py  models.py  translator.py
app/pkg/logger/: filters.py  logger.py  optional_import.py  tracing.py
app/pkg/models/: __init__.py
app/pkg/settings/: __init__.py  settings.py
app/pkg/utils/: circuit_breaker.py  retry.py
config/: alembic.ini  babel.cfg  logging.json  otel-collector.yaml  setup.cfg  yoyo.ini
migrations/: README.md  env.py
scripts/: migrate.py
tasks/: celery_app.py  notification_tasks.py
(+26 files in other folders)
